fix spacing

--- a/components/characterCard/CharacterCard.module.scss
+++ b/components/characterCard/CharacterCard.module.scss
@@ -74,6 +74,7 @@
     padding-bottom: 1rem;
     padding-inline: 1rem;
     background-image: linear-gradient(to top, #02accbcc 0% 30%, #ffffff00);
+    transition: .3s ease-out;
 
     .cardInfo_top {
       display: flex;
