--- a/components/panelBottom/episode/EpisodeItem.module.scss
+++ b/components/panelBottom/episode/EpisodeItem.module.scss
@@ -8,15 +8,21 @@
   p {
     font-family: 'Alkalami', sans-serif;
     font-weight: 400;
+    line-height: 1;
 
     &:last-child {
       display: flex;
       flex-direction: column;
       flex: 1;
+      row-gap: .5em;
     }
 
     .name {
       color: initial;
+
+      @media (prefers-color-scheme: dark) {
+        color: white;
+      }
     }
   } 
 }
